--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -39,7 +39,7 @@ div.wrapper form input{
     border: none;
     background-color: #a5a5a5;
 }
-div.wrapper a.button{
+div.wrapper button.button{
     display: block;
     margin-top: 1rem;
     width: 100%;
@@ -51,7 +51,7 @@ div.wrapper a.button{
     text-align: center;
     border: none;
 }
-div.wrapper a.button:hover{
+div.wrapper button.button:hover{
     background-color: #3D7D37;
     transition: all 300ms;
 }
